objects/Computer__c.object
<CustomObject>
    <description>This object is for Computers</description>
    <fields>
        <fullName>Brand__c</fullName>
        <inlineHelpText>Dear user, please enter brand name here(ex:hp).</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dell</fullName>
                    <default>true</default>
                    <label>Dell</label>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Dear user,Please enter name here</inlineHelpText>
        <label>Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Dear user, Please enter price here.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>Dear user, please enter weight here.</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Computer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>Computer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Computers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>